--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,8 +7,15 @@
   margin-right: -16px;
 }
 /* Filter section css */
-.spacex-filter {
-  background: #fff;
+
+.filters {
+  background-color: #fff;
+  padding-top: 1rem;
+  padding-bottom: 3rem;
+  border-radius: 6px;
+}
+.filters h5 {
+  padding-left: 1rem;
 }
 
 ul.ul-list-filter {
@@ -18,11 +25,12 @@ ul.ul-list-filter {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
+  justify-content: center;
 }
 
 .filters button {
   height: 2rem;
-  width: 70px;
+  width: 60px;
   background-color: #72e572;
   border: 1px solid green;
   border-radius: 0.3rem;
@@ -38,7 +46,7 @@ p.list-head {
 
 /* main section css */
 .spacex-list {
-  margin-bottom: 15px;
+  margin-bottom: 30px;
 }
 .img-container {
   padding: 12px;
@@ -59,4 +67,23 @@ p.list-head {
 .mission-details p {
   margin-bottom: 10px;
   line-height: 16px;
+}
+
+@media only screen and (max-width: 768px) {
+  .spacex-filter {
+    margin-bottom: 10px;
+  }
+
+  .filters {
+    padding: 15px;
+  }
+
+  ul.ul-list-filter {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5rem;
+  }
 }
